WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51995
AX: "AXExpanded" not exposed on most ARIA roles that use aria-expanded
https://bugs.webkit.org/show_bug.cgi?id=51995
Summary
AX: "AXExpanded" not exposed on most ARIA roles that use aria-expanded
chris fleizach
Reported
2011-01-06 10:45:36 PST
ARIA allows for the expanded state on arbitrary elements because it's a common design practice to have a heading or button preceding a section that acts like a disclosure triangle for that section.
http://www.w3.org/WAI/PF/aria/complete#aria-expanded
Attachments
Patch
(8.22 KB, patch)
2011-01-06 10:48 PST
,
chris fleizach
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2011-01-06 10:48:13 PST
Created
attachment 78130
[details]
Patch
chris fleizach
Comment 2
2011-01-06 12:49:43 PST
http://trac.webkit.org/changeset/75179
WebKit Review Bot
Comment 3
2011-01-06 13:10:14 PST
http://trac.webkit.org/changeset/75179
might have broken Chromium Mac Release
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug