AX: "AXExpanded" not exposed on most ARIA roles that use aria-expanded https://bugs.webkit.org/show_bug.cgi?id=51995

Reviewed by Beth Dakin.

WebCore:

Test: platform/mac/accessibility/aria-expanded-standard-items.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::supportsARIAExpanded):
(WebCore::AccessibilityObject::isExpanded):
* accessibility/AccessibilityObject.h:
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::isVisited):
* accessibility/AccessibilityRenderObject.h:
* accessibility/mac/AccessibilityObjectWrapper.mm:
(-[AccessibilityObjectWrapper additionalAccessibilityAttributeNames]):

LayoutTests:

* platform/mac/accessibility/aria-expanded-standard-items-expected.txt: Added.
* platform/mac/accessibility/aria-expanded-standard-items.html: Added.



Canonical link: https://commits.webkit.org/65501@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75179 268f45cc-cd09-0410-ab3c-d52691b4dbfc